--- a/lib/libnvpair/Makefile.am
+++ b/lib/libnvpair/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/config/Rules.am
 
-DEFAULT_INCLUDES = \
+DEFAULT_INCLUDES += \
 	-I${top_srcdir}/module/nvpair/include \
 	-I${top_srcdir}/lib/libnvpair/include \
 	-I${top_srcdir}/lib/libspl/include
