--- a/lib/libuutil/Makefile.am
+++ b/lib/libuutil/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/config/Rules.am
 
-DEFAULT_INCLUDES = \
+DEFAULT_INCLUDES += \
 	-I${top_srcdir}/lib/libuutil/include \
 	-I${top_srcdir}/lib/libspl/include \
 	-I${top_srcdir}/module/avl/include
