--- a/lib/libzpool/Makefile.am
+++ b/lib/libzpool/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/config/Rules.am
 
-DEFAULT_INCLUDES = \
+DEFAULT_INCLUDES += \
         -I${top_srcdir}/lib/libzpool/include \
         -I${top_srcdir}/lib/libspl/include \
         -I${top_srcdir}/lib/libnvpair/include \
