--- a/lib/libspl/Makefile.am
+++ b/lib/libspl/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/config/Rules.am
 
-DEFAULT_INCLUDES = \
+DEFAULT_INCLUDES += \
 	-I${top_srcdir}/lib/libspl/include
 
 lib_LTLIBRARIES = libspl.la
