--- a/cmd/zpios/Makefile.in
+++ b/cmd/zpios/Makefile.in
@@ -61,7 +61,6 @@ PROGRAMS = $(sbin_PROGRAMS)
 am_zpios_OBJECTS = zpios_main.$(OBJEXT) zpios_util.$(OBJEXT)
 zpios_OBJECTS = $(am_zpios_OBJECTS)
 zpios_LDADD = $(LDADD)
-DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/config/depcomp
 am__depfiles_maybe = depfiles
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
@@ -204,6 +203,7 @@ target_alias = @target_alias@
 target_cpu = @target_cpu@
 target_os = @target_os@
 target_vendor = @target_vendor@
+DEFAULT_INCLUDES = -I${top_srcdir}
 
 # FIXME: Quiet warnings not covered by the gcc-* patches.  We should
 # FIXME: consider removing this as soon as we reasonably can.
