--- a/lib/libzfs/Makefile.in
+++ b/lib/libzfs/Makefile.in
@@ -211,6 +211,15 @@ target_alias = @target_alias@
 target_cpu = @target_cpu@
 target_os = @target_os@
 target_vendor = @target_vendor@
+DEFAULT_INCLUDES = -I${top_srcdir} -I${top_srcdir}/lib/libzfs/include \
+	-I${top_srcdir}/lib/libzpool/include \
+	-I${top_srcdir}/lib/libspl/include \
+	-I${top_srcdir}/lib/libnvpair/include \
+	-I${top_srcdir}/lib/libuutil/include \
+	-I${top_srcdir}/module/zfs/include \
+	-I${top_srcdir}/module/zcommon/include \
+	-I${top_srcdir}/module/nvpair/include \
+	-I${top_srcdir}/module/avl/include
 
 # FIXME: Quiet warnings not covered by the gcc-* patches.  We should
 # FIXME: consider removing this as soon as we reasonably can.
@@ -222,17 +231,6 @@ AM_CFLAGS = -Wall -Wstrict-prototypes -Wshadow -Werror -Wno-switch \
 	-D_GNU_SOURCE -D__EXTENSIONS__ -D_REENTRANT \
 	-D_POSIX_PTHREAD_SEMANTICS -D_FILE_OFFSET_BITS=64 \
 	-D_LARGEFILE64_SOURCE -DTEXT_DOMAIN=\"zfs-linux-user\"
-DEFAULT_INCLUDES = \
-	-I${top_srcdir}/lib/libzfs/include \
-	-I${top_srcdir}/lib/libzpool/include \
-	-I${top_srcdir}/lib/libspl/include \
-        -I${top_srcdir}/lib/libnvpair/include \
-	-I${top_srcdir}/lib/libuutil/include \
-	-I${top_srcdir}/module/zfs/include \
-        -I${top_srcdir}/module/zcommon/include \
-        -I${top_srcdir}/module/nvpair/include \
-        -I${top_srcdir}/module/avl/include
-
 lib_LTLIBRARIES = libzfs.la
 libzfs_la_SOURCES = \
 	${top_srcdir}/lib/libzfs/libzfs_changelist.c \
