--- a/lib/libzpool/Makefile.in
+++ b/lib/libzpool/Makefile.in
@@ -210,6 +210,14 @@ target_alias = @target_alias@
 target_cpu = @target_cpu@
 target_os = @target_os@
 target_vendor = @target_vendor@
+DEFAULT_INCLUDES = -I${top_srcdir} \
+	-I${top_srcdir}/lib/libzpool/include \
+	-I${top_srcdir}/lib/libspl/include \
+	-I${top_srcdir}/lib/libnvpair/include \
+	-I${top_srcdir}/module/zcommon/include \
+	-I${top_srcdir}/module/nvpair/include \
+	-I${top_srcdir}/module/avl/include \
+	-I${top_srcdir}/module/zfs/include
 
 # FIXME: Quiet warnings not covered by the gcc-* patches.  We should
 # FIXME: consider removing this as soon as we reasonably can.
@@ -221,15 +229,6 @@ AM_CFLAGS = -Wall -Wstrict-prototypes -Wshadow -Werror -Wno-switch \
 	-D_GNU_SOURCE -D__EXTENSIONS__ -D_REENTRANT \
 	-D_POSIX_PTHREAD_SEMANTICS -D_FILE_OFFSET_BITS=64 \
 	-D_LARGEFILE64_SOURCE -DTEXT_DOMAIN=\"zfs-linux-user\"
-DEFAULT_INCLUDES = \
-        -I${top_srcdir}/lib/libzpool/include \
-        -I${top_srcdir}/lib/libspl/include \
-        -I${top_srcdir}/lib/libnvpair/include \
-        -I${top_srcdir}/module/zcommon/include \
-        -I${top_srcdir}/module/nvpair/include \
-        -I${top_srcdir}/module/avl/include \
-        -I${top_srcdir}/module/zfs/include
-
 lib_LTLIBRARIES = libzpool.la
 libzpool_la_SOURCES = \
 	${top_srcdir}/lib/libzpool/kernel.c \
