--- a/lib/libzfs/Makefile.in
+++ b/lib/libzfs/Makefile.in
@@ -216,7 +216,7 @@ DEFAULT_INCLUDES = -I${top_srcdir} -I${top_srcdir}/lib/libzfs/include \
 	-I${top_srcdir}/lib/libspl/include \
 	-I${top_srcdir}/lib/libnvpair/include \
 	-I${top_srcdir}/lib/libuutil/include \
-	-I${top_srcdir}/module/zfs/include \
+	-I${top_srcdir}/module/zfs -I${top_srcdir}/module/zfs/include \
 	-I${top_srcdir}/module/zcommon/include \
 	-I${top_srcdir}/module/nvpair/include \
 	-I${top_srcdir}/module/avl/include
