--- a/cmd/zdb/Makefile.in
+++ b/cmd/zdb/Makefile.in
@@ -203,7 +203,14 @@ target_alias = @target_alias@
 target_cpu = @target_cpu@
 target_os = @target_os@
 target_vendor = @target_vendor@
-DEFAULT_INCLUDES = -I${top_srcdir} -I${top_srcdir}/lib/libspl/include
+DEFAULT_INCLUDES = -I${top_srcdir} -I${top_srcdir}/lib/libspl/include \
+	-I${top_srcdir}/lib/libzpool/include \
+	-I${top_srcdir}/lib/libnvpair/include \
+	-I${top_srcdir}/lib/libzfs/include \
+	-I${top_srcdir}/module/zfs/include \
+	-I${top_srcdir}/module/zcommon/include \
+	-I${top_srcdir}/module/nvpair/include \
+	-I${top_srcdir}/module/avl/include
 
 # FIXME: Quiet warnings not covered by the gcc-* patches.  We should
 # FIXME: consider removing this as soon as we reasonably can.
