--- a/cmd/zfs/Makefile.am
+++ b/cmd/zfs/Makefile.am
@@ -1,15 +1,21 @@
 include $(top_srcdir)/config/Rules.am
 
 DEFAULT_INCLUDES += \
-	-I${top_srcdir}/lib/libspl/include
+	-I${top_srcdir}/lib/libspl/include \
+	-I${top_srcdir}/lib/libuutil/include \
+	-I${top_srcdir}/lib/libzfs/include \
+	-I${top_srcdir}/lib/libnvpair/include \
+	-I${top_srcdir}/module/zcommon/include \
+	-I${top_srcdir}/module/nvpair/include \
+	-I${top_srcdir}/module/avl/include
 
 sbin_PROGRAMS = zfs
 
 zfs_SOURCES = \
-	zfs_iter.c \
-	zfs_iter.h \
-	zfs_main.c \
-	zfs_util.h
+	${top_srcdir}/cmd/zfs/zfs_iter.c \
+	${top_srcdir}/cmd/zfs/zfs_iter.h \
+	${top_srcdir}/cmd/zfs/zfs_main.c \
+	${top_srcdir}/cmd/zfs/zfs_util.h
 
 zfs_LDADD = \
 	$(top_builddir)/lib/libspl/libspl.la
