--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -191,7 +191,7 @@ target_alias = @target_alias@
 target_cpu = @target_cpu@
 target_os = @target_os@
 target_vendor = @target_vendor@
-SUBDIRS = libspl libavl libnvpair libuutil libzfs # libzpool
+SUBDIRS = libspl libavl libnvpair libuutil libzfs libzpool
 all: all-recursive
 
 .SUFFIXES:
