--- a/lib/libnvpair/Makefile.am
+++ b/lib/libnvpair/Makefile.am
@@ -10,7 +10,7 @@ lib_LTLIBRARIES = libnvpair.la
 libnvpair_la_SOURCES = \
 	${top_srcdir}/lib/libnvpair/libnvpair.c \
 	${top_srcdir}/lib/libnvpair/nvpair_alloc_system.c \
-	${top_srcdir}/lib/libnvpair/include/libnvpair.h
+	${top_srcdir}/lib/libnvpair/include/libnvpair.h \
 	${top_srcdir}/module/nvpair/nvpair.c \
 	${top_srcdir}/module/nvpair/include/sys/nvpair.h \
 	${top_srcdir}/module/nvpair/include/sys/nvpair_impl.h
