--- a/cmd/zfs/Makefile.am
+++ b/cmd/zfs/Makefile.am
@@ -24,3 +24,5 @@ zfs_LDADD = \
 	$(top_builddir)/lib/libuutil/libuutil.la \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la
+
+zfs_LDFLAGS = -pthread
