--- a/cmd/ztest/Makefile.am
+++ b/cmd/ztest/Makefile.am
@@ -6,7 +6,15 @@ DEFAULT_INCLUDES += \
 sbin_PROGRAMS = ztest
 
 ztest_SOURCES = \
-	ztest.c
+	${top_srcdir}/cmd/ztest/ztest.c
 
 ztest_LDADD = \
-	$(top_builddir)/lib/libspl/libspl.la
+	$(top_builddir)/lib/libspl/libspl.la \
+	$(top_builddir)/lib/libavl/libavl.la \
+	$(top_builddir)/lib/libnvpair/libnvpair.la \
+	$(top_builddir)/lib/libuutil/libuutil.la \
+	$(top_builddir)/lib/libzpool/libzpool.la \
+	$(top_builddir)/lib/libzfs/libzfs.la
+
+ztest_LDFLAGS = -pthread
+
