--- a/cmd/ztest/Makefile.in
+++ b/cmd/ztest/Makefile.in
@@ -60,7 +60,12 @@ sbinPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(sbin_PROGRAMS)
 am_ztest_OBJECTS = ztest.$(OBJEXT)
 ztest_OBJECTS = $(am_ztest_OBJECTS)
-ztest_DEPENDENCIES = $(top_builddir)/lib/libspl/libspl.la
+ztest_DEPENDENCIES = $(top_builddir)/lib/libspl/libspl.la \
+	$(top_builddir)/lib/libavl/libavl.la \
+	$(top_builddir)/lib/libnvpair/libnvpair.la \
+	$(top_builddir)/lib/libuutil/libuutil.la \
+	$(top_builddir)/lib/libzpool/libzpool.la \
+	$(top_builddir)/lib/libzfs/libzfs.la
 depcomp = $(SHELL) $(top_srcdir)/config/depcomp
 am__depfiles_maybe = depfiles
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
@@ -216,11 +221,17 @@ AM_CFLAGS = -Wall -Wstrict-prototypes -Wshadow -Werror -Wno-switch \
 	-D_POSIX_PTHREAD_SEMANTICS -D_FILE_OFFSET_BITS=64 \
 	-D_LARGEFILE64_SOURCE -DTEXT_DOMAIN=\"zfs-linux-user\"
 ztest_SOURCES = \
-	ztest.c
+	${top_srcdir}/cmd/ztest/ztest.c
 
 ztest_LDADD = \
-	$(top_builddir)/lib/libspl/libspl.la
+	$(top_builddir)/lib/libspl/libspl.la \
+	$(top_builddir)/lib/libavl/libavl.la \
+	$(top_builddir)/lib/libnvpair/libnvpair.la \
+	$(top_builddir)/lib/libuutil/libuutil.la \
+	$(top_builddir)/lib/libzpool/libzpool.la \
+	$(top_builddir)/lib/libzfs/libzfs.la
 
+ztest_LDFLAGS = -pthread
 all: all-am
 
 .SUFFIXES:
@@ -314,6 +325,20 @@ distclean-compile:
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='$<' object='$@' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LTCOMPILE) -c -o $@ $<
+
+ztest.o: ${top_srcdir}/cmd/ztest/ztest.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT ztest.o -MD -MP -MF "$(DEPDIR)/ztest.Tpo" -c -o ztest.o `test -f '${top_srcdir}/cmd/ztest/ztest.c' || echo '$(srcdir)/'`${top_srcdir}/cmd/ztest/ztest.c; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/ztest.Tpo" "$(DEPDIR)/ztest.Po"; else rm -f "$(DEPDIR)/ztest.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='${top_srcdir}/cmd/ztest/ztest.c' object='ztest.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o ztest.o `test -f '${top_srcdir}/cmd/ztest/ztest.c' || echo '$(srcdir)/'`${top_srcdir}/cmd/ztest/ztest.c
+
+ztest.obj: ${top_srcdir}/cmd/ztest/ztest.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT ztest.obj -MD -MP -MF "$(DEPDIR)/ztest.Tpo" -c -o ztest.obj `if test -f '${top_srcdir}/cmd/ztest/ztest.c'; then $(CYGPATH_W) '${top_srcdir}/cmd/ztest/ztest.c'; else $(CYGPATH_W) '$(srcdir)/${top_srcdir}/cmd/ztest/ztest.c'; fi`; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/ztest.Tpo" "$(DEPDIR)/ztest.Po"; else rm -f "$(DEPDIR)/ztest.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='${top_srcdir}/cmd/ztest/ztest.c' object='ztest.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o ztest.obj `if test -f '${top_srcdir}/cmd/ztest/ztest.c'; then $(CYGPATH_W) '${top_srcdir}/cmd/ztest/ztest.c'; else $(CYGPATH_W) '$(srcdir)/${top_srcdir}/cmd/ztest/ztest.c'; fi`
 
 mostlyclean-libtool:
 	-rm -f *.lo
