--- a/lib/libspl/Makefile.am
+++ b/lib/libspl/Makefile.am
@@ -6,11 +6,13 @@ DEFAULT_INCLUDES += \
 lib_LTLIBRARIES = libspl.la
 
 libspl_la_SOURCES = \
+	${top_srcdir}/lib/libspl/getmntany.c \
 	${top_srcdir}/lib/libspl/list.c \
 	${top_srcdir}/lib/libspl/mkdirp.c \
 	${top_srcdir}/lib/libspl/strlcat.c \
 	${top_srcdir}/lib/libspl/strlcpy.c \
 	${top_srcdir}/lib/libspl/strnlen.c \
 	${top_srcdir}/lib/libspl/u8_textprep.c \
+	${top_srcdir}/lib/libspl/zone.c \
 	${top_srcdir}/lib/libspl/include/sys/list.h \
 	${top_srcdir}/lib/libspl/include/sys/list_impl.h
