--- a/lib/libspl/Makefile.am
+++ b/lib/libspl/Makefile.am
@@ -7,6 +7,7 @@ lib_LTLIBRARIES = libspl.la
 
 libspl_la_SOURCES = \
 	${top_srcdir}/lib/libspl/getexecname.c \
+	${top_srcdir}/lib/libspl/gethrtime.c \
 	${top_srcdir}/lib/libspl/getmntany.c \
 	${top_srcdir}/lib/libspl/list.c \
 	${top_srcdir}/lib/libspl/mkdirp.c \
