--- a/cmd/ztest/Makefile.am
+++ b/cmd/ztest/Makefile.am
@@ -16,5 +16,4 @@ ztest_LDADD = \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la
 
-ztest_LDFLAGS = -pthread
-
+ztest_LDFLAGS = -pthread -lm
