--- a/cmd/zfs/Makefile.in
+++ b/cmd/zfs/Makefile.in
@@ -240,7 +240,7 @@ zfs_LDADD = \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la
 
-zfs_LDFLAGS = -pthread
+zfs_LDFLAGS = -pthread -lm
 all: all-am
 
 .SUFFIXES:
