--- a/cmd/ztest/Makefile.in
+++ b/cmd/ztest/Makefile.in
@@ -231,7 +231,7 @@ ztest_LDADD = \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la
 
-ztest_LDFLAGS = -pthread
+ztest_LDFLAGS = -pthread -lm
 all: all-am
 
 .SUFFIXES:
