Remove -Wshadow for now

--- a/config/Rules.am
+++ b/config/Rules.am
@@ -2,7 +2,10 @@ DEFAULT_INCLUDES = -I${top_srcdir}
 
 # FIXME: Quiet warnings not covered by the gcc-* patches.  We should
 # FIXME: consider removing this as soon as we reasonably can.
-AM_CFLAGS  = -Wall -Wstrict-prototypes -Wshadow -Werror
+#
+# FIXME: Add -Wshadow once everything is working
+#
+AM_CFLAGS  = -Wall -Wstrict-prototypes -Werror
 AM_CFLAGS += -Wno-switch -Wno-unused -Wno-missing-braces
 AM_CFLAGS += -Wno-unknown-pragmas -Wno-parentheses
 AM_CFLAGS += -Wno-uninitialized -fno-strict-aliasing
