--- a/lib/libspl/Makefile.am
+++ b/lib/libspl/Makefile.am
@@ -14,6 +14,7 @@ libspl_la_SOURCES = \
 	${top_srcdir}/lib/libspl/strlcat.c \
 	${top_srcdir}/lib/libspl/strlcpy.c \
 	${top_srcdir}/lib/libspl/strnlen.c \
+	${top_srcdir}/lib/libspl/strtoxx.c \
 	${top_srcdir}/lib/libspl/u8_textprep.c \
 	${top_srcdir}/lib/libspl/zone.c \
 	${top_srcdir}/lib/libspl/include/sys/list.h \
