--- a/lib/libspl/Makefile.am
+++ b/lib/libspl/Makefile.am
@@ -3,6 +3,9 @@ include $(top_srcdir)/config/Rules.am
 DEFAULT_INCLUDES += \
 	-I${top_srcdir}/lib/libspl/include
 
+AM_CCASFLAGS = \
+	-I${top_srcdir}/lib/libspl/include
+
 lib_LTLIBRARIES = libspl.la
 
 libspl_la_SOURCES = \
