Refresh autogen products

--- a/cmd/Makefile.in
+++ b/cmd/Makefile.in
@@ -75,6 +75,8 @@ AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
 BUILDDIR = @BUILDDIR@
 CC = @CC@
+CCAS = @CCAS@
+CCASFLAGS = @CCASFLAGS@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
 CMDDIR = @CMDDIR@
