--- a/lib/libnvpair/Makefile.in
+++ b/lib/libnvpair/Makefile.in
@@ -93,6 +93,8 @@ AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
 BUILDDIR = @BUILDDIR@
 CC = @CC@
+CCAS = @CCAS@
+CCASFLAGS = @CCASFLAGS@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
 CMDDIR = @CMDDIR@
